FullQa New/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ARR_Quota_Annual__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_April__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_August__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: August</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_December__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_February__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: February</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_January__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: January</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_July__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_June__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_March__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: March</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_May__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_November__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_October__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: October</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_Q1__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_Q2__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_Q3__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR_Quota_September__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>ARR Quota: September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Center__c</fullName>
        <formula>case( 
TEXT(Avalara_Division__c), 
&quot;COMPLIANCE&quot;, &quot;COR&quot;, 
&quot;PROFSERVICES&quot;, &quot;COR&quot;, 
&quot;EXCISE TAX&quot;, &quot;COR&quot;, 
&quot;BIZTECH&quot;, &quot;G&amp;A&quot;, 
&quot;FINANCE&quot;, &quot;G&amp;A&quot;, 
&quot;LEGAL&quot;, &quot;G&amp;A&quot;, 
&quot;BUSDEV&quot;,&quot;S&amp;M&quot;, 
&quot;CUST SUCCESS&quot;,&quot;S&amp;M&quot;, 
&quot;LOYALTY&quot;,&quot;S&amp;M&quot;, 
&quot;MARKETING&quot;,&quot;S&amp;M&quot;, 
&quot;SALES&quot;,&quot;S&amp;M&quot;, 
&quot;ENGINEERING&quot;,&quot;R&amp;D&quot;, 
&quot;GLOBAL TAX CONTENT&quot;,&quot;R&amp;D&quot; , 
&quot;PRODUCT MGMT&quot;,&quot;R&amp;D&quot;, 
&quot;R and D&quot;,&quot;R&amp;D&quot;, 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avalara_Division__c</fullName>
        <description>Defines which division user is in for allocation purposes (reporting)</description>
        <label>Avalara Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIZTECH</fullName>
                </value>
                <value>
                    <fullName>BUSDEV</fullName>
                </value>
                <value>
                    <fullName>COMPLIANCE</fullName>
                </value>
                <value>
                    <fullName>CUST SUCCESS</fullName>
                </value>
                <value>
                    <fullName>ENGINEERING</fullName>
                </value>
                <value>
                    <fullName>EXCISE TAX</fullName>
                </value>
                <value>
                    <fullName>FINANCE</fullName>
                </value>
                <value>
                    <fullName>GLOBAL TAX CONTENT</fullName>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                </value>
                <value>
                    <fullName>LOYALTY</fullName>
                </value>
                <value>
                    <fullName>MARKETING</fullName>
                </value>
                <value>
                    <fullName>PRODUCT MGMT</fullName>
                </value>
                <value>
                    <fullName>PROFSERVICES</fullName>
                </value>
                <value>
                    <fullName>R AND D</fullName>
                </value>
                <value>
                    <fullName>SALES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Quota_April__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_August__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: August</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_December__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_February__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: February</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_January__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: January</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_July__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_June__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_March__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: March</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_May__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_November__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_October__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: October</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_Q1__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_Q2__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_Q3__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota_September__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Quota__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Booking Quota: Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CAM_Territory__c</fullName>
        <description>2017 introduction of new CAM territories to be assigned to CAM and used for Distribution.</description>
        <label>CAM Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East MW-IL/MN</fullName>
                </value>
                <value>
                    <fullName>East MW-North Central</fullName>
                </value>
                <value>
                    <fullName>East NE-New England</fullName>
                </value>
                <value>
                    <fullName>East NE-NY/NJ</fullName>
                </value>
                <value>
                    <fullName>East SE-FL/GA</fullName>
                </value>
                <value>
                    <fullName>East SE-MidAtlantic</fullName>
                </value>
                <value>
                    <fullName>West CA-North</fullName>
                </value>
                <value>
                    <fullName>West Mtn-North</fullName>
                </value>
                <value>
                    <fullName>West CA-South</fullName>
                </value>
                <value>
                    <fullName>West South-Central</fullName>
                </value>
                <value>
                    <fullName>West South-East</fullName>
                </value>
                <value>
                    <fullName>West Mtn-South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP_15_Minute_Check_In_Call__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14246</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14246</inlineHelpText>
        <label>CP 15 Minute Check-In Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CP_1_Hour_Review_Call__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14246</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14246</inlineHelpText>
        <label>CP 1 Hour Review Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CP_30_Minute_Review_Call__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14246</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14246</inlineHelpText>
        <label>CP 30 Minute Review Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CP_Default_Meeting__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14246</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14246</inlineHelpText>
        <label>CP Default Meeting</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CP_GoLive_Planning_Call__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-14246</description>
        <inlineHelpText>https://jira.avalara.com/browse/IBST-14246</inlineHelpText>
        <label>CP GoLive Planning Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CSAT_Aggregate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CSAT Aggregate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Case_List__c</fullName>
        <label>CSAT Case List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSAT_Count__c</fullName>
        <label>CSAT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Last_Date__c</fullName>
        <label>CSAT Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSAT_Reset_Date__c</fullName>
        <label>CSAT Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSAT_Rolling_Average__c</fullName>
        <formula>IF(CSAT_Count__c = 0, 0, CSAT_Aggregate__c /  CSAT_Count__c/ 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Rolling Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSAT_Violation_Days__c</fullName>
        <formula>CSAT_Last_Date__c -  CSAT_Reset_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Violation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Violation_Event_Days__c</fullName>
        <label>CSAT Violation Event Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Violation_Event_Max__c</fullName>
        <label>CSAT Violation Event Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSITeamName__c</fullName>
        <description>The name of the team that a Customer Support Agent is a member of.</description>
        <inlineHelpText>The name of the team that a Customer Support Agent is a member of.</inlineHelpText>
        <label>CSI Team Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_Team_Name_v2__c</fullName>
        <formula>IF((BEGINS(RoleName__c, &quot;CT&quot;)), LEFT(RoleName__c, 6), 
IF((BEGINS(RoleName__c, &quot;CAM&quot;)), RoleName__c,
IF( RoleName__c=&quot;Customer Loyalty Marketing&quot;, &quot;CAM Team&quot;,
IF((BEGINS(RoleName__c, &quot;FS&quot;)), &quot;Sales Team&quot;,
IF( RoleName__c=&quot;VP Sales Ops&quot;, &quot;CAM Team&quot;,
IF((BEGINS(RoleName__c, &quot;FI&quot;)), LEFT(RoleName__c, 6), 
IF((BEGINS(RoleName__c, &quot;SOHO&quot;)), LEFT(RoleName__c, 6), 
IF( RoleName__c=&quot;GoLive Coordinator&quot;, &quot;GoLive&quot;,
IF( RoleName__c=&quot;Director of Implementation&quot;, &quot;GoLive&quot;,
IF( RoleName__c=&quot;Tax Compliance&quot;, &quot;Compliance&quot;,
IF((BEGINS(RoleName__c, &quot;COMP&quot;)), &quot;Compliance&quot;,
IF((BEGINS(RoleName__c, &quot;B&quot;)), LEFT(RoleName__c, 6), 

&quot;Other&quot;))))))))))))</formula>
        <label>CSI Team Name v2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <label>Calendar</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chili_Piper_Scheduling_Link__c</fullName>
        <description>https://jira.avalara.com/browse/IBST-11344</description>
        <inlineHelpText>Add a link to your scheduling tool so that can be used in dynamic signature rules (e.g. automated email from Eloqua).</inlineHelpText>
        <label>Chili Piper Scheduling Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Booked__c</fullName>
        <label>Current FY Booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Dings__c</fullName>
        <label>Current FY Dings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ding_Quota_Annual__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_April__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: April</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_August__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: August</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_December__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: December</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_February__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: February</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_January__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: January</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_July__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_June__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_March__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: March</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_May__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_November__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: November</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_October__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: October</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_Q1__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_Q2__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_Q3__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ding_Quota_September__c</fullName>
        <description>https://jira.avalara.com/browse/ITBSE-890</description>
        <label>Ding Quota: September</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Ding_Date__c</fullName>
        <label>First Ding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Ding_Days__c</fullName>
        <formula>IF(Sales_Tenure_Date__c &gt;= DATE(2014,1,1) ,First_Ding_Date__c -  Sales_Tenure_Date__c, First_Ding_Date__c - DATE(2014,1,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Ding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Five_Ding_Date__c</fullName>
        <label>First Five Ding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Five_Ding_Days__c</fullName>
        <formula>IF(Sales_Tenure_Date__c &gt;= DATE(2014,1,1) ,First_Five_Ding_Date__c - Sales_Tenure_Date__c, First_Five_Ding_Date__c - DATE(2014,1,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Five Ding Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales - Field</fullName>
                </value>
                <value>
                    <fullName>Sales - CAM</fullName>
                </value>
                <value>
                    <fullName>Marketing - Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing - General</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Golive</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Zytax</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Sales - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEO_Manager_2017__c</fullName>
        <description>Used for historical reporting on user records.</description>
        <label>GEO Manager 2017</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLCRegion__c</fullName>
        <label>GLC Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLI_Month_Calc_All__c</fullName>
        <label>GLI Month Calc All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLI_Month_Calc_Primary__c</fullName>
        <label>GLI Month Calc Primary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLI_Month_Certs__c</fullName>
        <label>GLI Month Certs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLI_Month_Returns__c</fullName>
        <label>GLI Month Returns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoLive_Consultant_Region__c</fullName>
        <description>IBST-14207</description>
        <label>GoLive Consultant Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GoLive_Consultant_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSandboxUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>https://jira.avalara.com/browse/IBST-5367</description>
        <label>IsSandboxUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KCS_Role__c</fullName>
        <label>KCS Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KCS Candidate</fullName>
                </value>
                <value>
                    <fullName>KCS Contributor</fullName>
                </value>
                <value>
                    <fullName>KCS Publisher</fullName>
                </value>
                <value>
                    <fullName>KCS Coach</fullName>
                </value>
                <value>
                    <fullName>KCS Domain Expert</fullName>
                </value>
                <value>
                    <fullName>CAM Author</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Department__c</fullName>
        <label>LMS Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CAM</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New Hire Sales</fullName>
                </value>
                <value>
                    <fullName>New Hire Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Division__c</fullName>
        <label>LMS Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue Generation</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Team__c</fullName>
        <label>LMS Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VSB</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>EComm</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Emerging ERP</fullName>
                </value>
                <value>
                    <fullName>CAM 1</fullName>
                </value>
                <value>
                    <fullName>CAM 2</fullName>
                </value>
                <value>
                    <fullName>CAM 3</fullName>
                </value>
                <value>
                    <fullName>CAM Named</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Lead Gen</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Client Support</fullName>
                </value>
                <value>
                    <fullName>GoLive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile_URL__c</fullName>
        <description>attribute  will be used for Eloquoa campaigns.
Loyalty: Susan Gover IBST-2280</description>
        <label>LinkedIn Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MSP_Ding_Quota__c</fullName>
        <label>MSP Ding Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>